--- a/04-iteration-02.qmd
+++ b/04-iteration-02.qmd
@@ -19,13 +19,13 @@ bibliography: references.bib
 
 This session is (mostly) about functional programming:
 
-::: {.incremental}
-- Aside: managing file paths within your project
-- Example: read a bunch of files, then put them in a single data frame
-- Fundamental paradigms in {purrr}: 
-   - `map()`, `keep()`, and `reduce()`
-- Adverbs to handle failure
-- More generally, using functions as arguments to functions 🤯
+::: incremental
+-   Aside: managing file paths within your project
+-   Example: read a bunch of files, then put them in a single data frame
+-   Fundamental paradigms in {purrr}:
+    -   `map()`, `keep()`, and `reduce()`
+-   Adverbs to handle failure
+-   More generally, using functions as arguments to functions 🤯
 :::
 
 . . .
@@ -41,25 +41,25 @@ For coding, we will use `r-programming-exercises`:
 
 For me, `here::here()` is a truly magical function:
 
-::: {.incremental}
-- useful in scripts: `.R` files (like today!)
-- useful in documents: `.Rmd` and `.qmd` files
+::: incremental
+-   useful in scripts: `.R` files (like today!)
+-   useful in documents: `.Rmd` and `.qmd` files
 :::
 
 . . .
 
 If you need to:
 
-  - refer to a file, and 
-  - it's in a *fixed* place *within* your project
+-   refer to a file, and
+-   it's in a *fixed* place *within* your project
 
 `here()` can make your life *much* simpler!
 
-## Here: Example {auto-animate=true}
+## Here: Example {auto-animate="true"}
 
-:::: {.columns}
+::::: columns
 ::: {.column width="40px"}
-```
+```         
 
 
 
@@ -71,12 +71,11 @@ If you need to:
 
 
 👋
-
 ```
 :::
 
-::: {.column}
-```{.text}
+::: column
+``` text
 /Users/ijlyttle/repos/programming-r-exercises/ 
 |-- programming-r-exercises.Rproj 
 |-- README.md
@@ -91,21 +90,21 @@ If you need to:
     |-- ...
 ```
 :::
-::::
+:::::
 
 <hr>
 
 Within `iteration-02-01-reading-files.R`:
 
-- `here("data/gapminder/1952.xlsx")`
+-   `here("data/gapminder/1952.xlsx")`
 
 Works just as well for `.Rmd`, `.qmd` files.
 
-## Here: Searches {auto-animate=true}
+## Here: Searches {auto-animate="true"}
 
-:::: {.columns}
+::::: columns
 ::: {.column width="40px"}
-```
+```         
 
 
 
@@ -117,12 +116,11 @@ Works just as well for `.Rmd`, `.qmd` files.
 
 🔎
 
-
 ```
 :::
 
-::: {.column}
-```
+::: column
+```         
 /Users/ijlyttle/repos/programming-r-exercises/ 
 |-- programming-r-exercises.Rproj 
 |-- README.md
@@ -137,21 +135,19 @@ Works just as well for `.Rmd`, `.qmd` files.
     |-- ...
 ```
 :::
-::::
-
+:::::
 
 <hr>
 
-- Looks in directory for an `.Rproj` file (simplified)
-- Doesn't find one
+-   Looks in directory for an `.Rproj` file (simplified)
+-   Doesn't find one
 
-## Here: Moves up and searches {auto-animate=true}
+## Here: Moves up and searches {auto-animate="true"}
 
-:::: {.columns}
+::::: columns
 ::: {.column width="40px"}
-```
+```         
 🔎
-
 
 
 
@@ -165,8 +161,8 @@ Works just as well for `.Rmd`, `.qmd` files.
 ```
 :::
 
-::: {.column}
-```
+::: column
+```         
 /Users/ijlyttle/repos/programming-r-exercises/ 
 |-- programming-r-exercises.Rproj 
 |-- README.md
@@ -181,18 +177,18 @@ Works just as well for `.Rmd`, `.qmd` files.
     |-- ...
 ```
 :::
-::::
+:::::
 
 <hr>
 
-- Moves up one directory
-- Looks again
+-   Moves up one directory
+-   Looks again
 
-## Here: Finds `.Rproj` {auto-animate=true}
+## Here: Finds `.Rproj` {auto-animate="true"}
 
-:::: {.columns}
+::::: columns
 ::: {.column width="40px"}
-```
+```         
 
 ✅
 
@@ -204,12 +200,11 @@ Works just as well for `.Rmd`, `.qmd` files.
 
 
 
-
 ```
 :::
 
-::: {.column}
-```
+::: column
+```         
 /Users/ijlyttle/repos/programming-r-exercises/ 
 |-- programming-r-exercises.Rproj 
 |-- README.md
@@ -224,14 +219,13 @@ Works just as well for `.Rmd`, `.qmd` files.
     |-- ...
 ```
 :::
-::::
+:::::
 
+## Here: Flags project-root {auto-animate="true"}
 
-## Here: Flags project-root {auto-animate=true}
-
-:::: {.columns}
+::::: columns
 ::: {.column width="40px"}
-```
+```         
 🚩
 
 
@@ -243,12 +237,11 @@ Works just as well for `.Rmd`, `.qmd` files.
 
 
 
-
 ```
 :::
 
-::: {.column}
-```
+::: column
+```         
 /Users/ijlyttle/repos/programming-r-exercises/ 
 |-- programming-r-exercises.Rproj 
 |-- README.md
@@ -263,17 +256,17 @@ Works just as well for `.Rmd`, `.qmd` files.
     |-- ...
 ```
 :::
-::::
+:::::
 
 <hr>
 
 `/Users/ijlyttle/repos/programming-r-exercises/`
 
-## Here: Returns full path {auto-animate=true}
+## Here: Returns full path {auto-animate="true"}
 
-:::: {.columns}
+::::: columns
 ::: {.column width="40px"}
-```
+```         
 
 
 
@@ -285,12 +278,11 @@ Works just as well for `.Rmd`, `.qmd` files.
 
 
 
-
 ```
 :::
 
-::: {.column}
-```
+::: column
+```         
 /Users/ijlyttle/repos/programming-r-exercises/ 
 |-- programming-r-exercises.Rproj 
 |-- README.md
@@ -305,11 +297,11 @@ Works just as well for `.Rmd`, `.qmd` files.
     |-- ...
 ```
 :::
-::::
+:::::
 
 <hr>
 
-```r
+``` r
 here("data/gapminder/1952.xlsx")
 ```
 
@@ -319,12 +311,11 @@ here("data/gapminder/1952.xlsx")
 
 <hr>
 
-::: {.caution-note}
-`here()` returns a string that represents a path. 
+::: caution-note
+`here()` returns a string that represents a path.
 
 It makes **no** guarantee that the path exists.
 :::
-
 
 ## Here: Epilogue
 
@@ -340,7 +331,7 @@ However, if you move your target files (e.g. `.xlsx`), you need to modify your s
 
 The *here* way:
 
-```r
+``` r
 read_excel(here("data/gapminder/1952.xlsx"))
 ```
 
@@ -348,8 +339,8 @@ read_excel(here("data/gapminder/1952.xlsx"))
 
 <hr>
 
-::: {.callout-note icon=false title="🧐 Where `here()` can help"}
-```r
+::: {.callout-note icon="false" title="🧐 Where `here()` can help"}
+``` r
 read_excel("../data/gapminder/1952.xlsx")
 ```
 :::
@@ -358,10 +349,10 @@ read_excel("../data/gapminder/1952.xlsx")
 
 <hr>
 
-::: {.callout-important icon=false title="🔥 Meme Alert"}
+::: {.callout-important icon="false" title="🔥 Meme Alert"}
 Do not do this:
 
-```r
+``` r
 setwd("/Users/ijlyttle/repos/programming-r-exercises/data/gapminder")
 
 read_excel("1952.xlsx")
@@ -446,7 +437,7 @@ Functional programming has three fundamental paradigms; they act on lists or vec
 -   `reduce` - combine into new thing: `purrr::reduce()`
 :::
 
-. . . 
+. . .
 
 Each of these takes a *function* as an argument, to tell the operator *what* to do.
 
@@ -463,9 +454,9 @@ For coding, we will use `r-programming-exercises`:
 -   Open `R/iteration-02-02-fundamental-paradigms.R`.
 -   Restart R.
 
-## Map: Intro {auto-animate=true}
+## Map: Intro {auto-animate="true"}
 
-```r
+``` r
 num <- 1:4
 num |> map(\(x) x + 1)
 ```
@@ -474,48 +465,45 @@ num |> map(\(x) x + 1)
 
 `map()` takes:
 
-  - list or atomic vector
-  - function to apply to each member of the vector
+-   list or atomic vector
+-   function to apply to each member of the vector
 
-## Map: Intermediate result {auto-animate=true}
+## Map: Intermediate result {auto-animate="true"}
 
-```r
+``` r
 num <- 1:4
 num |> map(\(x) x + 1)
 ```
 
 <hr>
 
-| Input   | Result |
-|:-------:|:------:|
-| 1       | 2      |
-| 2       |        |        
-| 3       |        |      
-| 4       |        |      
+| Input | Result |
+|:-----:|:------:|
+|   1   |   2    |
+|   2   |        |
+|   3   |        |
+|   4   |        |
 
+## Map: Result {auto-animate="true," auto-animate-unmatched="false"}
 
-## Map: Result {auto-animate=true, auto-animate-unmatched=false}
-
-```r
+``` r
 num <- 1:4
 num |> map(\(x) x + 1)
 ```
 
 <hr>
 
-| Input   | Result |
-|:-------:|:------:|
-| 1       | **2**  |
-| 2       | **3**  |        
-| 3       | **4**  |      
-| 4       | **5**  |   
+| Input | Result |
+|:-----:|:------:|
+|   1   | **2**  |
+|   2   | **3**  |
+|   3   | **4**  |
+|   4   | **5**  |
 
 ## Map: Atomic variants
 
-:::: {.columns}
-
+::::: columns
 ::: {.column width="50%"}
-
 `map()` always returns a list:
 
 ```{r}
@@ -525,7 +513,6 @@ num |> map(\(x) x + 1)
 :::
 
 ::: {.column width="50%"}
-
 Use an atomic variant to specify type:
 
 ```{r}
@@ -533,62 +520,60 @@ num <- 1:4
 num |> map_int(\(x) x + 1)
 ```
 :::
+:::::
 
-::::
+## Keep: Intro {auto-animate="true"}
 
-## Keep: Intro {auto-animate=true}
-
-
-```r
+``` r
 num <- 1:4
 num |> keep(\(x) x %% 2 == 0)
 ```
 
 <hr>
 
-Outside {purrr}: known as `filter()`, but {dplyr} took this name first. 
+Outside {purrr}: known as `filter()`, but {dplyr} took this name first.
 
 `keep()` takes:
 
-  - list or vector
-  - function, when applied to each member, returns `TRUE` or `FALSE`
-    - this is called a *predicate* function
+-   list or vector
+-   function, when applied to each member, returns `TRUE` or `FALSE`
+    -   this is called a *predicate* function
 
-## Keep: Intermediate result {auto-animate=true, auto-animate-unmatched=false}
+## Keep: Intermediate result {auto-animate="true," auto-animate-unmatched="false"}
 
-```r
+``` r
 num <- 1:4
 num |> keep(\(x) x %% 2 == 0)
 ```
 
 <hr>
 
-| Input   | Evaluation | Result |
-|:-------:|:---------- |:------:|
-| 1       | `FALSE`    |        | 
-| 2       | `TRUE`     | 2      |
-| 3       |            |        |              
-| 4       |            |        |
+| Input | Evaluation | Result |
+|:-----:|:-----------|:------:|
+|   1   | `FALSE`    |        |
+|   2   | `TRUE`     |   2    |
+|   3   |            |        |
+|   4   |            |        |
 
-## Keep: Result {auto-animate-unmatched=false}
+## Keep: Result {auto-animate-unmatched="false"}
 
-```r
+``` r
 num <- 1:4
 num |> keep(\(x) x %% 2 == 0)
 ```
 
 <hr>
 
-| Input   | Evaluation | Result |
-|:-------:|:----------- |:------:|
-| 1       | **`FALSE`** |        | 
-| 2       | **`TRUE`**  | **2**  |
-| 3       | **`FALSE`** |        |              
-| 4       | **`TRUE`**  | **4**  |
+| Input | Evaluation  | Result |
+|:-----:|:------------|:------:|
+|   1   | **`FALSE`** |        |
+|   2   | **`TRUE`**  | **2**  |
+|   3   | **`FALSE`** |        |
+|   4   | **`TRUE`**  | **4**  |
 
-## Reduce: Intro {auto-animate=true}
+## Reduce: Intro {auto-animate="true"}
 
-```r
+``` r
 num <- 1:4
 num |> reduce(\(acc, x) acc + x)
 ```
@@ -597,90 +582,90 @@ num |> reduce(\(acc, x) acc + x)
 
 `reduce()` takes:
 
-  - a list or vector
-  - a *reducer* function, which takes two arguments:
-    - the accumulated value
-    - the "next" value of the input
-    
-## Reduce: First result {auto-animate=true}
+-   a list or vector
+-   a *reducer* function, which takes two arguments:
+    -   the accumulated value
+    -   the "next" value of the input
 
-```r
+## Reduce: First result {auto-animate="true"}
+
+``` r
 num <- 1:4
 num |> reduce(\(acc, x) acc + x)
 ```
 
 <hr>
 
-| Input   | Result |
-|:-------:|:------:|
-| 1       | 1      |
-| 2       |        |        
-| 3       |        |      
-| 4       |        |   
+| Input | Result |
+|:-----:|:------:|
+|   1   |   1    |
+|   2   |        |
+|   3   |        |
+|   4   |        |
 
-## Reduce: Intermediate result {auto-animate=true, auto-animate-unmatched=false}
+## Reduce: Intermediate result {auto-animate="true," auto-animate-unmatched="false"}
 
-```r
+``` r
 num <- 1:4
 num |> reduce(\(acc, x) acc + x)
 ```
 
 <hr>
 
-| Input   | Result |
-|:-------:|:------:|
-| 1       |        |
-| 2       | 3      |        
-| 3       |        |      
-| 4       |        |   
+| Input | Result |
+|:-----:|:------:|
+|   1   |        |
+|   2   |   3    |
+|   3   |        |
+|   4   |        |
 
-## Reduce: Result {auto-animate=true, auto-animate-unmatched=false}
+## Reduce: Result {auto-animate="true," auto-animate-unmatched="false"}
 
-```r
+``` r
 num <- 1:4
 num |> reduce(\(acc, x) acc + x)
 ```
 
 <hr>
 
-| Input   | Result |
-|:-------:|:------:|
-| 1       |        |
-| 2       |        |        
-| 3       |        |      
-| 4       | **10** |   
+| Input | Result |
+|:-----:|:------:|
+|   1   |        |
+|   2   |        |
+|   3   |        |
+|   4   | **10** |
 
-## Reduce: Initialize {auto-animate=true}
+## Reduce: Initialize {auto-animate="true"}
 
-```r
+``` r
 num <- 1:4
 num |> reduce(\(acc, x) acc + x, .init = 1)
 ```
 
 <hr>
 
-| Input   | Result |
-|:-------:|:------:|
-| 1       |        |
-| 2       |        |        
-| 3       |        |      
-| 4       | **11** |  
+| Input | Result |
+|:-----:|:------:|
+|   1   |        |
+|   2   |        |
+|   3   |        |
+|   4   | **11** |
 
 ## Reduce: Use existing functions
 
-```r
+``` r
 num <- 1:4
 num |> reduce(sum, .init = 1)
 ```
 
 <hr>
 
-| Input   | Result |
-|:-------:|:------:|
-| 1       |        |
-| 2       |        |        
-| 3       |        |      
-| 4       | **11** |  
+| Input | Result |
+|:-----:|:------:|
+|   1   |        |
+|   2   |        |
+|   3   |        |
+|   4   | **11** |
 
 ## Additional arguments
 
@@ -706,27 +691,26 @@ num |> reduce(\(acc, x) sum(acc, x, na.rm = TRUE))
 . . .
 
 ::: {.callout-caution title="No longer recommended"}
-
-```r
+``` r
 # TODO: check that newer Quarto will fix font-size here
 num |> reduce(sum, na.rm = TRUE)
 ```
-::: 
+:::
 
 Using an anonymous function will:
 
- - make it more explicit which argument goes to which function.
- - tend to yield better error messages.
+-   make it more explicit which argument goes to which function.
+-   tend to yield better error messages.
 
 ## Variants and adverbs
 
 Some useful variants, can mix and match:
 
 ::: incremental
- - `map_lgl()` , `map_int()`, `map_dbl()`, `map_chr()`
- - `walk()`: like `map()`, but called for side-effect
- - `imap()`, `lmap()`: use index or list-name as argument
- - `map2()`, `pmap()`: apply over sets of inputs
+-   `map_lgl()` , `map_int()`, `map_dbl()`, `map_chr()`
+-   `walk()`: like `map()`, but called for side-effect
+-   `imap()`, `lmap()`: use index or list-name as argument
+-   `map2()`, `pmap()`: apply over sets of inputs
 :::
 
 . . .
@@ -734,10 +718,10 @@ Some useful variants, can mix and match:
 Adverbs modify verbs (functions):
 
 ::: incremental
- - `possibly()`, `quietly()`, `slowly()`, `insistently()`, `safely()`
- - `negate()`: return the negative of a predicate
- - `compose()`: put two functions together
- - `partial()`: pre-fill some arguments of a function
+-   `possibly()`, `quietly()`, `slowly()`, `insistently()`, `safely()`
+-   `negate()`: return the negative of a predicate
+-   `compose()`: put two functions together
+-   `partial()`: pre-fill some arguments of a function
 :::
 
 ## Handling failures with adverbs
@@ -765,7 +749,7 @@ For coding, we will use `r-programming-exercises`:
 
 Function operators:
 
--   take a function 
+-   take a function
 -   return a modified function
 
 . . .
@@ -835,8 +819,8 @@ Let's run this, uncommenting one line at a time.
 We have seen functions as arguments in:
 
 ::: incremental
-- `map()`, `keep()`, `reduce()`: tells them what to do
-- adverbs, like `possibly()`: tells what behavior to modify
+-   `map()`, `keep()`, `reduce()`: tells them what to do
+-   adverbs, like `possibly()`: tells what behavior to modify
 :::
 
 . . .
@@ -859,6 +843,8 @@ For coding, we will use `r-programming-exercises`:
 ```{r}
 library("tidyverse")
 library("palmerpenguins")
+library("conflicted")
+conflicts_prefer(palmerpenguins::penguins)
 
 ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
   geom_point()
@@ -922,10 +908,10 @@ percent_labeller(c(0, 0.01, 0.1, 1))
 
 Play around with:
 
- - `accuracy`
- - values sent to `percent_labeller`
- - whatever else seems interesting to you
- 
+-   `accuracy`
+-   values sent to `percent_labeller`
+-   whatever else seems interesting to you
+
 ## Your turn: Labeller
 
 ```{r}
@@ -935,7 +921,6 @@ ggplot(penguins, aes(x = bill_length_mm, color = species)) +
 
 Add `scale_y_continuous()` to this plot, to use a percentage-labeller.
 
- 
 ## Your turn: Labeller (solution)
 
 ```{r}
@@ -1024,32 +1009,32 @@ penguins_local <-
 
 We have a couple of helper functions to convert to:
 
-- Data frames: column-based
+-   Data frames: column-based
 
-  ```{r}
-  #' @param .d unnamed list of named lists, i.e. transposed data frame
-  #'
-  #' @return tibble
-  dpurrr_to_tibble <- function(.d) {
-    .d |>
-      purrr::list_transpose() |>
-      tibble::as_tibble()
-  }  
-  ```
+    ```{r}
+    #' @param .d unnamed list of named lists, i.e. transposed data frame
+    #'
+    #' @return tibble
+    dpurrr_to_tibble <- function(.d) {
+      .d |>
+        purrr::list_transpose() |>
+        tibble::as_tibble()
+    }  
+    ```
 
-- Lists of lists: row-based
- 
-  ```{r}
-  #' @param .data data frame or tibble
-  #'
-  #' @return unnamed list of named lists, i.e. transposed data frame
-  dpurrr_to_list <- function(.data) {
-    .data |>
-      as.list() |>
-      purrr::list_transpose(simplify = FALSE)
-  }
-  ```
- 
+-   Lists of lists: row-based
+
+    ```{r}
+    #' @param .data data frame or tibble
+    #'
+    #' @return unnamed list of named lists, i.e. transposed data frame
+    dpurrr_to_list <- function(.data) {
+      .data |>
+        as.list() |>
+        purrr::list_transpose(simplify = FALSE)
+    }
+    ```
+
 ## Our turn: Experiment
 
 ```{r}
@@ -1063,9 +1048,9 @@ penguins_local |>
 
 Comment and change lines as you see fit.
 
-## Our turn: dpurrr filter (first element) {auto-animate=true}
+## Our turn: dpurrr filter (first element) {auto-animate="true"}
 
-```{.r code-line-numbers="1-3"}
+``` {.r code-line-numbers="1-3"}
 # filter is just purrr::keep()
 penguins_local |>
   dpurrr_to_list() |>
@@ -1080,8 +1065,7 @@ penguins_list <- penguins_local |> dpurrr_to_list()
 str_element <- \(.x, i) .x[[i]] |> str()
 ```
 
-:::: {.columns}
-
+:::::: columns
 ::: {.column .opacity-67 width="33%"}
 ```{r echo=FALSE}
 str_element(penguins_list, 1)
@@ -1099,12 +1083,11 @@ str_element(penguins_list, 2)
 str_element(penguins_list, 3)
 ```
 :::
+::::::
 
-::::
+## Our turn: dpurrr filter (more elements) {auto-animate="true"}
 
-## Our turn: dpurrr filter (more elements) {auto-animate=true}
-
-```{.r code-line-numbers="1-3"}
+``` {.r code-line-numbers="1-3"}
 # filter is just purrr::keep()
 penguins_local |>
   dpurrr_to_list() |>
@@ -1114,8 +1097,7 @@ penguins_local |>
 
 Predicate function acts on each "row", `d`, which is a list:
 
-:::: {.columns}
-
+:::::: columns
 ::: {.column .opacity-67 width="33%"}
 ```{r echo=FALSE}
 str_element(penguins_list, 1)
@@ -1133,12 +1115,11 @@ str_element(penguins_list, 2)
 str_element(penguins_list, 3)
 ```
 :::
+::::::
 
-::::
+## Our turn: dpurrr filter (element results) {auto-animate="true"}
 
-## Our turn: dpurrr filter (element results) {auto-animate=true}
-
-```{.r code-line-numbers="1-4"}
+``` {.r code-line-numbers="1-4"}
 # filter is just purrr::keep()
 penguins_local |>
   dpurrr_to_list() |>
@@ -1148,8 +1129,7 @@ penguins_local |>
 
 Predicate function acts on each "row", `d`, which is a list:
 
-:::: {.columns}
-
+:::::: columns
 ::: {.column .opacity-33 width="33%"}
 ```{r echo=FALSE}
 str_element(penguins_list, 1)
@@ -1167,13 +1147,11 @@ str_element(penguins_list, 2)
 str_element(penguins_list, 3)
 ```
 :::
+::::::
 
-::::
+## Our turn: dpurrr filter (result) {auto-animate="true"}
 
-
-## Our turn: dpurrr filter (result) {auto-animate=true}
-
-```{.r code-line-numbers="1-5"}
+``` {.r code-line-numbers="1-5"}
 # filter is just purrr::keep()
 penguins_local |>
   dpurrr_to_list() |>
@@ -1191,8 +1169,7 @@ penguins_local |>
   dpurrr_to_tibble() 
 ```
 
-
-## Our turn: dpurrr mutate {auto-animate=true}
+## Our turn: dpurrr mutate {auto-animate="true"}
 
 ```{r}
 #' @param .d unnamed list of named lists, i.e. transposed data frame
@@ -1207,7 +1184,7 @@ dpurrr_mutate <- function(.d, mapper) {
 
 This version of mutate operates on every "row", modifying its list.
 
-```r
+``` r
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_mutate(\(d) list(body_mass_kg = d$body_mass_g / 1000)) |>
@@ -1215,9 +1192,9 @@ penguins_local |>
   print()
 ```
 
-## Our turn: dpurrr mutate (start) {auto-animate=true}
+## Our turn: dpurrr mutate (start) {auto-animate="true"}
 
-```{.r code-line-numbers="1-1"}
+``` {.r code-line-numbers="1-1"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_mutate(\(d) list(body_mass_kg = d$body_mass_g / 1000)) |>
@@ -1230,9 +1207,9 @@ penguins_local |>
 penguins_local
 ```
 
-## Our turn: dpurrr mutate (by row, before) {auto-animate=true}
+## Our turn: dpurrr mutate (by row, before) {auto-animate="true"}
 
-```{.r code-line-numbers="1-2"}
+``` {.r code-line-numbers="1-2"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_mutate(\(d) list(body_mass_kg = d$body_mass_g / 1000)) |>
@@ -1241,8 +1218,7 @@ penguins_local |>
 
 <hr>
 
-:::: {.columns}
-
+:::::: columns
 ::: {.column .opacity-67 width="33%"}
 ```{r echo=FALSE}
 str_element(penguins_list, 1)
@@ -1260,12 +1236,11 @@ str_element(penguins_list, 2)
 str_element(penguins_list, 3)
 ```
 :::
+::::::
 
-::::
+## Our turn: dpurrr mutate (by row, after) {auto-animate="true" auto-animate-unmatched="false"}
 
-## Our turn: dpurrr mutate (by row, after) {auto-animate=true auto-animate-unmatched=false}
-
-```{.r code-line-numbers="1-3"}
+``` {.r code-line-numbers="1-3"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_mutate(\(d) list(body_mass_kg = d$body_mass_g / 1000)) |>
@@ -1281,8 +1256,7 @@ penguins_mutate_list <-
   dpurrr_mutate(\(d) list(body_mass_kg = d$body_mass_g / 1000)) 
 ```
 
-:::: {.columns}
-
+:::::: columns
 ::: {.column width="33%"}
 ```{r echo=FALSE}
 str_element(penguins_mutate_list, 1)
@@ -1300,12 +1274,11 @@ str_element(penguins_mutate_list, 2)
 str_element(penguins_mutate_list, 3)
 ```
 :::
+::::::
 
-::::
+## Our turn: dpurrr mutate (result) {auto-animate="true"}
 
-## Our turn: dpurrr mutate (result) {auto-animate=true}
-
-```{.r code-line-numbers="1-4"}
+``` {.r code-line-numbers="1-4"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_mutate(\(d) list(body_mass_kg = d$body_mass_g / 1000)) |>
@@ -1339,7 +1312,7 @@ dpurrr_summarise <- function(.d, reducer, .init, ...) {
 
 Takes a transposed data frame, returns a transposed data frame with a single "row".
 
-```r
+``` r
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_summarise(
@@ -1352,9 +1325,9 @@ penguins_local |>
   print()
 ```
 
-## Our turn: dpurrr summarise (start) {auto-animate=true}
+## Our turn: dpurrr summarise (start) {auto-animate="true"}
 
-```{.r code-line-numbers="1-1,10"}
+``` {.r code-line-numbers="1-1,10"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_summarise(
@@ -1373,9 +1346,9 @@ penguins_local |>
 penguins_local
 ```
 
-## Our turn: dpurrr summarise (by row, before) {auto-animate=true}
+## Our turn: dpurrr summarise (by row, before) {auto-animate="true"}
 
-```{.r code-line-numbers="1-2,10"}
+``` {.r code-line-numbers="1-2,10"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_summarise(
@@ -1390,8 +1363,7 @@ penguins_local |>
 
 <hr>
 
-:::: {.columns}
-
+:::::: columns
 ::: {.column .opacity-67 width="33%"}
 ```{r echo=FALSE}
 str_element(penguins_list, 1)
@@ -1409,13 +1381,11 @@ str_element(penguins_list, 2)
 str_element(penguins_list, 3)
 ```
 :::
+::::::
 
-::::
+## Our turn: dpurrr summarise (by row, after) {auto-animate="true"}
 
-
-## Our turn: dpurrr summarise (by row, after) {auto-animate=true}
-
-```{.r code-line-numbers="1-8,10"}
+``` {.r code-line-numbers="1-8,10"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_summarise(
@@ -1446,9 +1416,9 @@ penguins_summarise_list <-
 str_element(penguins_summarise_list, 1)
 ```
 
-## Our turn: dpurrr summarise (result) {auto-animate=true}
+## Our turn: dpurrr summarise (result) {auto-animate="true"}
 
-```{.r code-line-numbers="1-10"}
+``` {.r code-line-numbers="1-10"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_summarise(
@@ -1480,7 +1450,7 @@ penguins_local |>
 
 We need a couple more functions to split and combine, also for our reducer:
 
-```r
+``` r
 #' @param .d unnamed list of named lists, i.e. transposed data frame
 #' @param name string, name of variable on which to split
 #'
@@ -1494,7 +1464,7 @@ dpurrr_split <- function(.d, name) {
 
 <hr>
 
-```r
+``` r
 #' @param .nd named list of transposed data frames
 #' @param name string, name of variable to put into combined list
 #'
@@ -1551,9 +1521,9 @@ dpurrr_combine <- function(.nd, name) {
 }
 ```
 
-## Our turn: dpurrr summarise with grouping (start) {auto-animate=true}
+## Our turn: dpurrr summarise with grouping (start) {auto-animate="true"}
 
-```{.r code-line-numbers="1,7"}
+``` {.r code-line-numbers="1,7"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_split("species") |>
@@ -1569,9 +1539,9 @@ penguins_local |>
 penguins_local
 ```
 
-## Our turn: dpurrr summarise with grouping (by row) {auto-animate=true}
+## Our turn: dpurrr summarise with grouping (by row) {auto-animate="true"}
 
-```{.r code-line-numbers="1-2,7"}
+``` {.r code-line-numbers="1-2,7"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_split("species") |>
@@ -1595,10 +1565,9 @@ penguins_list_split <-
   dpurrr_split("species")
 ```
 
-::::: {.columns width="100%" .border .padding-4 .height-auto .display-flex}
-
-:::: {.column width="32%" .opacity-67 .margin-4}
-::: {.padding-4}
+::::::::: {.columns .border .padding-4 .height-auto .display-flex width="100%"}
+:::: {.column .opacity-67 .margin-4 width="32%"}
+::: padding-4
 ```{r echo=FALSE}
 indent(str_element(penguins_list_split$Adelie, 1))
 indent(str_element(penguins_list_split$Adelie, 2))
@@ -1606,8 +1575,8 @@ indent(str_element(penguins_list_split$Adelie, 2))
 :::
 ::::
 
-:::: {.column width="31%" .opacity-67 .margin-4}
-::: {.padding-4}
+:::: {.column .opacity-67 .margin-4 width="31%"}
+::: padding-4
 ```{r echo=FALSE}
 indent(str_element(penguins_list_split$Gentoo, 1))
 indent(str_element(penguins_list_split$Gentoo, 2))
@@ -1615,21 +1584,19 @@ indent(str_element(penguins_list_split$Gentoo, 2))
 :::
 ::::
 
-:::: {.column width="32%" .opacity-67 .margin-4}
-::: {.padding-4}
+:::: {.column .opacity-67 .margin-4 width="32%"}
+::: padding-4
 ```{r echo=FALSE}
 indent(str_element(penguins_list_split$Chinstrap, 1))
 indent(str_element(penguins_list_split$Chinstrap, 2))
 ```
 :::
 ::::
+:::::::::
 
+## Our turn: dpurrr summarise with grouping (split) {auto-animate="true"}
 
-:::::
-
-## Our turn: dpurrr summarise with grouping (split) {auto-animate=true}
-
-```{.r code-line-numbers="1-3,7"}
+``` {.r code-line-numbers="1-3,7"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_split("species") |>
@@ -1641,12 +1608,12 @@ penguins_local |>
 
 <hr>
 
-::::: {.columns width="100%" .padding-4 .height-auto .display-flex}
-
-:::: {.column width="32%" .opacity-67 .margin-4}
+::::::::: {.columns .padding-4 .height-auto .display-flex width="100%"}
+:::: {.column .opacity-67 .margin-4 width="32%"}
 ```{r echo=FALSE}
 cat("$Adelie")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_split$Adelie, 1))
@@ -1655,10 +1622,11 @@ indent(str_element(penguins_list_split$Adelie, 2))
 :::
 ::::
 
-:::: {.column width="31%" .opacity-67 .margin-4}
+:::: {.column .opacity-67 .margin-4 width="31%"}
 ```{r echo=FALSE}
 cat("$Gentoo")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_split$Gentoo, 1))
@@ -1667,10 +1635,11 @@ indent(str_element(penguins_list_split$Gentoo, 2))
 :::
 ::::
 
-:::: {.column width="32%" .opacity-67 .margin-4}
+:::: {.column .opacity-67 .margin-4 width="32%"}
 ```{r echo=FALSE}
 cat("$Chinstrap")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_split$Chinstrap, 1))
@@ -1678,12 +1647,11 @@ indent(str_element(penguins_list_split$Chinstrap, 2))
 ```
 :::
 ::::
+:::::::::
 
-:::::
+## Our turn: dpurrr summarise with grouping (summarise) {auto-animate="true"}
 
-## Our turn: dpurrr summarise with grouping (summarise) {auto-animate=true}
-
-```{.r code-line-numbers="1-4,7"}
+``` {.r code-line-numbers="1-4,7"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_split("species") |>
@@ -1701,12 +1669,12 @@ penguins_list_summarise <-
   map(\(d) d |> dpurrr_summarise(body_mass_g_min_max))
 ```
 
-::::: {.columns width="100%" .padding-4 .height-auto .display-flex}
-
-:::: {.column width="32%" .margin-4}
+::::::::: {.columns .padding-4 .height-auto .display-flex width="100%"}
+:::: {.column .margin-4 width="32%"}
 ```{r echo=FALSE}
 cat("$Adelie")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_summarise$Adelie, 1))
@@ -1714,10 +1682,11 @@ indent(str_element(penguins_list_summarise$Adelie, 1))
 :::
 ::::
 
-:::: {.column width="31%" .margin-4}
+:::: {.column .margin-4 width="31%"}
 ```{r echo=FALSE}
 cat("$Gentoo")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_summarise$Gentoo, 1))
@@ -1725,22 +1694,22 @@ indent(str_element(penguins_list_summarise$Gentoo, 1))
 :::
 ::::
 
-:::: {.column width="32%" .margin-4}
+:::: {.column .margin-4 width="32%"}
 ```{r echo=FALSE}
 cat("$Chinstrap")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_summarise$Chinstrap, 1))
 ```
 :::
 ::::
+:::::::::
 
-:::::
+## Our turn: dpurrr summarise with grouping (combine 🌗) {auto-animate="true"}
 
-## Our turn: dpurrr summarise with grouping (combine 🌗) {auto-animate=true}
-
-```{.r code-line-numbers="1-5,7"}
+``` {.r code-line-numbers="1-5,7"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_split("species") |>
@@ -1758,12 +1727,12 @@ penguins_list_combine <-
   dpurrr_combine("species")
 ```
 
-::::: {.columns width="100%" .padding-4 .height-auto .display-flex}
-
-:::: {.column width="32%" .margin-4}
+::::::::: {.columns .padding-4 .height-auto .display-flex width="100%"}
+:::: {.column .margin-4 width="32%"}
 ```{r echo=FALSE}
 cat("$Adelie")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_combine, 1))
@@ -1771,10 +1740,11 @@ indent(str_element(penguins_list_combine, 1))
 :::
 ::::
 
-:::: {.column width="31%" .margin-4}
+:::: {.column .margin-4 width="31%"}
 ```{r echo=FALSE}
 cat("$Gentoo")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_combine, 2))
@@ -1782,22 +1752,22 @@ indent(str_element(penguins_list_combine, 2))
 :::
 ::::
 
-:::: {.column width="32%" .margin-4}
+:::: {.column .margin-4 width="32%"}
 ```{r echo=FALSE}
 cat("$Chinstrap")
 ```
+
 ::: {.border .padding-4}
 ```{r echo=FALSE}
 indent(str_element(penguins_list_combine, 3))
 ```
 :::
 ::::
+:::::::::
 
-:::::
+## Our turn: dpurrr summarise with grouping (combine 🌕) {auto-animate="true"}
 
-## Our turn: dpurrr summarise with grouping (combine 🌕) {auto-animate=true}
-
-```{.r code-line-numbers="1-5,7"}
+``` {.r code-line-numbers="1-5,7"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_split("species") |>
@@ -1809,37 +1779,35 @@ penguins_local |>
 
 <hr>
 
-::::: {.columns .border width="100%" .padding-4 .height-auto .display-flex}
-
-:::: {.column width="32%" .margin-4}
-::: {.padding-4}
+::::::::: {.columns .border .padding-4 .height-auto .display-flex width="100%"}
+:::: {.column .margin-4 width="32%"}
+::: padding-4
 ```{r echo=FALSE}
 indent(str_element(penguins_list_combine, 1))
 ```
 :::
 ::::
 
-:::: {.column width="31%" .margin-4}
-::: {.padding-4}
+:::: {.column .margin-4 width="31%"}
+::: padding-4
 ```{r echo=FALSE}
 indent(str_element(penguins_list_combine, 2))
 ```
 :::
 ::::
 
-:::: {.column width="32%" .margin-4}
-::: {.padding-4}
+:::: {.column .margin-4 width="32%"}
+::: padding-4
 ```{r echo=FALSE}
 indent(str_element(penguins_list_combine, 3))
 ```
 :::
 ::::
+:::::::::
 
-:::::
+## Our turn: dpurrr summarise with grouping (result) {auto-animate="true"}
 
-## Our turn: dpurrr summarise with grouping (result) {auto-animate=true}
-
-```{.r code-line-numbers="1-7"}
+``` {.r code-line-numbers="1-7"}
 penguins_local |>
   dpurrr_to_list() |>
   dpurrr_split("species") |>
@@ -1855,7 +1823,6 @@ penguins_local |>
 penguins_list_combine |> dpurrr_to_tibble()
 ```
 
-
 ## Our turn: Finally...
 
 We can agree this presents no danger to dplyr.
@@ -1864,19 +1831,19 @@ We can agree this presents no danger to dplyr.
 
 In JavaScript, data frames are often arrays of objects (lists); you can use tools like [**tidyjs**](https://observablehq.com/@pbeshai/tidy-js-intro-demo?collection=@pbeshai/tidy-js):
 
-![](images/tidyjs.png){width=70% fig-align="center" fig-alt="Screenshot of tidyjs Observable page"}
+![](images/tidyjs.png){width="70%" fig-align="center" fig-alt="Screenshot of tidyjs Observable page"}
 
 ## Summary
 
 ::: incremental
-- {here} can help you manage file paths within projects.
-- Functional programming has three fundamental paradigms:
-  - filter (`purrr::keep()`), map, reduce
-- {purrr} offers variants and adverbs.
-- Adverbs can help you handle failure.
-- Functions can be used as arguments to functions.
-- Functions can be returned functions.
-- Another view of data frames (if we had time).
+-   {here} can help you manage file paths within projects.
+-   Functional programming has three fundamental paradigms:
+    -   filter (`purrr::keep()`), map, reduce
+-   {purrr} offers variants and adverbs.
+-   Adverbs can help you handle failure.
+-   Functions can be used as arguments to functions.
+-   Functions can be returned functions.
+-   Another view of data frames (if we had time).
 :::
 
 ## Wrap-up
