--- a/04-iteration-02.qmd
+++ b/04-iteration-02.qmd
@@ -5,7 +5,7 @@ author: "Emma Rand and Ian Lyttle"
 format: 
   revealjs:
     theme: [simple, styles.scss]
-    footer: <https://pos.it/programming_r_24>
+    footer: <https://pos.it/r-programming-conf25>
     slide-number: true
     chalkboard: true
     code-link: true
