chore: update to 2025

--- a/index.qmd
+++ b/index.qmd
@@ -2,15 +2,15 @@
 title: "From R User to R Programmer"
 ---
 
-### posit::conf(2024)
+### posit::conf(2025)
 
 by Emma Rand and Ian Lyttle
 
 ------------------------------------------------------------------------
 
-:spiral_calendar: August 12, 2024\
-:alarm_clock: 09:00 - 17:00\
-:hotel: Quinault\
+:spiral_calendar: September 16, 2025
+:alarm_clock: 09:00 - 17:00
+:hotel: TBD
 :writing_hand: [pos.it/r-programming-conf25](https://pos.it/r-programming-conf25)
 
 ------------------------------------------------------------------------
