--- a/01-functions-01.qmd
+++ b/01-functions-01.qmd
@@ -1,7 +1,7 @@
 ---
 title: "useR to programmeR"
 subtitle: "👋 & Functions 1"
-author: "Emma Rand and Ian Lyttle <br>WiFi: Posit Conf 2024<br>Password: conf2024"
+author: "Emma Rand and Ian Lyttle <br>WiFi: <TODO><br>Password: <TODO>"
 format: 
   revealjs:
     theme: [simple, styles.scss]
@@ -30,12 +30,11 @@ This is a two-day, hands-on workshop for those who have embraced the tidyverse a
 
 ## The team
 
-::: columns
+::::: columns
 ::: {.column width="55%"}
 Emma Rand
 
 🐘[\@3mma\@mastodon.social](https://mastodon.social/@3mma)
-
 
 Lionel Henry
 :::
@@ -47,7 +46,7 @@ Ian Lyttle
 
 Jonathan McPherson
 :::
-:::
+:::::
 
  
 
@@ -61,40 +60,40 @@ Jonathan McPherson
 
 ### WiFi
 
--   Network: Posit Conf 2024
--   Password: conf2024
+-   Network: <TODO>
+-   Password: <TODO>
 
 ## Introductions
 
 To each other! With help from Yorkshire!
 
-. . .Posit Conf 2024
+. . .Posit Conf 2025
 
-::: columns
-::: {.column width="36%"}
+::::::::: columns
+:::: {.column width="36%"}
 ::: {style="font-size: 40%;"}
 ![](images/quality-street.png){width="300"}
 
 *Ingredients*: Sugar, Glucose syrup, Cocoa mass, Vegetable fats (Palm, Rapeseed, Sunflower, Coconut,Mango kernel/ Sal/ Shea), Sweetened condensed skimmed milk (Skimmed milk, Sugar), Cocoa butter, Dried whole milk, Glucose-fructose syrup, Coconut, Lactose and proteins from whey (from Milk), Whey powder (from Milk), Hazelnuts, Skimmed milk powder, Butter (from Milk), Emulsifiers (Sunflower lecithin, E471), Flavourings, Butterfat (from Milk), Fat-reduced cocoa powder, Salt, Lactic acid.
 :::
-:::
+::::
 
-::: {.column width="32%"}
+:::: {.column width="32%"}
 ::: {style="font-size: 40%;"}
 ![](images/after-eight-thin-mint-squares-25-piece-box.jpg){width="300"}
 
 *Ingredients*: Sugar, Semi-Sweet Chocolate (Sugar, Chocolate, Cocoa Butter, Milkfat, Soy and Sunflower Lecithin, Natural Vanilla Flavor), Glucose Syrup, Peppermint Oil, Citric Acid, Invertase.
 :::
-:::
+::::
 
-::: {.column width="32%"}
+:::: {.column width="32%"}
 ::: {style="font-size: 40%;"}
 ![](images/haribo-strawbs.jpeg){width="300"}
 
 *Ingredients*: Glucose Syrup, Sugar, Starch, Acid: Citric Acid, Flavouring, Fruit and Plant Concentrates: Aronia, Blackcurrant, Elderberry, Grape, Lemon, Orange, Safflower Spirulina, Caramelised Sugar Syrup, Glazing Agents: Beeswax, Carnauba Wax, Elderberry Extract.
 :::
-:::
-:::
+::::
+:::::::::
 
 ## Code of Conduct
 
@@ -145,15 +144,15 @@ We built this course using the most-recent versions of R (4.4) and RStudio (2024
 
 ## Schedule {.smaller}
 
-| Time          | Activity                                                                                    |
-|:----------------------|:------------------------------------------------|
+| Time | Activity |
+|:----------------------|:-----------------------------------------------|
 | 09:00 - 10:30 | [Functions 1](01-functions-01.html) Introduction, vector and dataframe functions, embracing |
-| 10:30 - 11:00 | ☕ *Coffee break*                                                                           |
-| 11:00 - 12:30 | [Functions 2](02-functions-02.html) Plot functions, style and side effects                  |
-| 12:30 - 13:30 | 🍱 🥗 🌮 🍴 *Lunch break*                                                                   |
-| 13:30 - 15:00 | [Iteration 1](03-iteration-01.html) Introduction and modifying multiple columns             |
-| 15:00 - 15:30 | ☕ *Coffee break*                                                                           |
-| 15:30 - 17:00 | [Iteration 2](04-iteration-02.html) Reading and writing multiple files                      |
+| 10:30 - 11:00 | ☕ *Coffee break* |
+| 11:00 - 12:30 | [Functions 2](02-functions-02.html) Plot functions, style and side effects |
+| 12:30 - 13:30 | 🍱 🥗 🌮 🍴 *Lunch break* |
+| 13:30 - 15:00 | [Iteration 1](03-iteration-01.html) Introduction and modifying multiple columns |
+| 15:00 - 15:30 | ☕ *Coffee break* |
+| 15:30 - 17:00 | [Iteration 2](04-iteration-02.html) Reading and writing multiple files |
 
 ## How we will work
 
