--- a/01-functions-01.qmd
+++ b/01-functions-01.qmd
@@ -17,7 +17,7 @@ bibliography: references.bib
 
 ## Introductions
 
-This is a two-day, hands-on workshop for those who have embraced the tidyverse and want to improve their R programming skills and, especially, reduce the amount of duplication in their code.
+This is a one-day, hands-on workshop for those who have embraced the tidyverse and want to improve their R programming skills and, especially, reduce the amount of duplication in their code.
 
 -   do you have experience equivalent to an introductory data science course using tidyverse?
 -   are you comfortable with the [Whole game](https://r4ds.hadley.nz/whole-game.html) chapter of [R for Data Science (2nd Edition)](https://r4ds.hadley.nz/) by by Hadley Wickham, Mine Çetinkaya-Rundel, and Garrett Grolemund.
