--- a/01-functions-01.qmd
+++ b/01-functions-01.qmd
@@ -44,7 +44,7 @@ Ian Lyttle
 
 🐘[\@ijlyttle\@vis.social](https://mastodon.social/@ijlyttle@vis.social)
 
-Jonathan McPherson
+Richard Iannone
 :::
 :::::
 
@@ -117,7 +117,7 @@ Reporting:
 
 ## 🙏 to
 
--   Lionel and Jonathan
+-   Richard
 
 -   colleagues, friends and learners at Schneider Electric, University of York and RForwards!
 
