--- a/04-iteration-02.qmd
+++ b/04-iteration-02.qmd
@@ -1860,7 +1860,7 @@ Data from the survey informs curriculum and format decisions for future conf wor
 
 ::: incremental
 -   Emma
--   Lionel and Jonathan
+-   Richard
 -   Mine Çetinkaya-Rundel, Posit
 -   **You** 🤗
 :::
